--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/metro/metro"
   ],
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "上海地铁极限换乘",
     "navigationBarBackgroundColor": "#ffffff"
   },
   "style": "v2",
