直接进入首页 以后这里有用 可以选择不同的城市

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
+    "pages/metro/metro",
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/metro/metro"
+    "pages/logs/logs"
   ],
   "window": {
     "navigationBarTextStyle": "black",
