--- a/project.config.json
+++ b/project.config.json
@@ -14,13 +14,13 @@
     "coverView": false,
     "postcss": false,
     "minified": false,
-    "enhance": false,
+    "enhance": true,
     "showShadowRootInWxmlPanel": false,
     "packNpmRelationList": [],
     "ignoreUploadUnusedFiles": true,
     "compileHotReLoad": false,
     "skylineRenderEnable": true,
-    "es6": false,
+    "es6": true,
     "compileWorklet": false,
     "uglifyFileName": false,
     "uploadWithSourceMap": true,
@@ -46,5 +46,5 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wxc6e63e843fc50c0e"
+  "appid": "wxc8b27abd551d4d76"
 }
