--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,7 @@
   ],
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "上海地铁极限换乘",
+    "navigationBarTitleText": "地铁极限换乘",
     "navigationBarBackgroundColor": "#ffffff"
   },
   "style": "v2",
